# Phoenix-OS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.11.0.md  RELEASE_NOTES_v0.12.0.md  RELEASE_NOTES_v0.13.0.md  RELEASE_NOTES_v0.14.0.md  RELEASE_NOTES_v0.15.0.md  RELEASE_NOTES_v0.16.0.md  RELEASE_NOTES_v0.17.0.md  RELEASE_NOTES_v0.18.0.md  RELEASE_NOTES_v0.19.0.md  RELEASE_NOTES_v0.20.0.md  RELEASE_NOTES_v0.21.0.md  RELEASE_NOTES_v0.22.0.md  RELEASE_NOTES_v0.23.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.9.0.md  SECURITY.md  VALIDATION.md  pyproject.toml
docs/: architecture.md  migration-from-nova-3x.md  migration-v0.20-to-v0.21.md  migration-v0.22-to-v0.23.md
examples/: audit_archival.py  audit_ledger.py  capability_registry.py  configuration.py  control_plane_dashboard.py  durable_audit_ledger.py  durable_jobs.py  durable_workflows.py  event_bus.py  identity_authentication.py  kernel.py  observability.py  plugin_system.py  policy_engine.py  runtime.py  secrets_vault.py  state_store.py
scripts/: check.ps1  check.sh
tests/: test_audit_archive.py  test_audit_contracts.py  test_audit_ledger.py  test_audit_runtime_integration.py  test_authentication_manager.py  test_capability_adapter.py  test_capability_contracts.py  test_capability_registry.py  test_configuration_contracts.py  test_configuration_decoders.py  (+150 more)
(+259 files in other folders)
