[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "phoenix-os"
version = "0.3.0"
description = "A headless asynchronous kernel with deterministic events and secure capability invocation."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Phoenix contributors" }]
keywords = ["orchestration", "kernel", "event-bus", "capabilities", "asyncio"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.15",
  "pre-commit>=4.2",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/phoenix_os"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src", "tests", "examples"]

[tool.coverage.run]
branch = true
source = ["phoenix_os"]
